--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^2.1.1",
     "@angular/router": "^3.1.1",
     "core-js": "^2.4.1",
+    "material-design-lite": "^1.2.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-rc.1",
     "systemjs": "^0.19.40",
